# spn-ipu

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py  spn-ipu.code-workspace
.devcontainer/: Dockerfile  build-ortools.sh  devcontainer.json
.devcontainer/conan-profiles/: clang-debug  clang-release
apps/playground/: CMakeLists.txt  playground.cpp
conan/dagP/: conanfile.py  sconstruct.patch
libspnipu/: CMakeLists.txt
libspnipu/libspnipu/backend/: CMakeLists.txt  ExecutionEngine.cpp  ExecutionEngine.hpp  LowerToGraphene.cpp  LowerToGraphene.hpp
libspnipu/libspnipu/frontend/: CMakeLists.txt  Deserialize.cpp  Deserialize.hpp  spflow.capnp
libspnipu/libspnipu/model/: CMakeLists.txt  Edge.hpp  Nodes.cpp  Nodes.hpp  Partitioning.hpp  SPN.cpp  SPN.hpp  Visitor.hpp
libspnipu/libspnipu/scheduling/: BSPSchedule.cpp  BSPSchedule.hpp  BSPScheduleTimings.cpp  BSPScheduleTimings.hpp  CMakeLists.txt  DagPPartitioner.cpp  ILPScheduler.cpp  ILPScheduler.hpp  Partitioning.hpp  PerformanceModel.cpp  PerformanceModel.hpp
libspnipu/libspnipu/util/: CMakeLists.txt  DotVisualization.cpp  DotVisualization.hpp  HostExecutor.hpp  HtmlVisualization.cpp  HtmlVisualization.hpp  Visualization.cpp  Visualization.hpp
